Descrive Virtualenv installation option

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -101,7 +101,6 @@
     "1. In the \"current\" Strange Eons folder, manually fix the relevant file name.\n",
     "2. If your modification resulted in a longer filename, remove some \"-\" characters so that the total number of characters in the file name stays constant.\n",
     "3. Alternatively, if your modification resulted in a shorter filename, add extra \"-\" characters so that the total number of characters in the file name stays constant.\n",
-    "4. Remember to delete the file \n",
     "4. Then, run the updateCards script."
    ]
   },
@@ -118,6 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "# Directory of OCTGN installation\n",
     "dirOCTGN = os.path.expanduser('~')+'\\\\Documents\\\\OCTGN\\\\'\n",
     "if not os.path.isdir(dirOCTGN): print('Invalid path!')"
@@ -139,7 +139,7 @@
    ],
    "source": [
     "#Make Image Pack\n",
-    "import os,os.path\n",
+    "import os.path\n",
     "import zipfile\n",
     "import shutil\n",
     "\n",
