Refactor the project

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -2,53 +2,75 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Google drive file ID for spreadsheet\n",
-    "GDID = '1k7uoC0_GWPJ2x-mMPYTEyaBXUvmaegJ_'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "url = 'https://drive.google.com/uc?export=download&id='+GDID\n",
-    "myfile = requests.get(url)\n",
-    "open('setExcel.xlsm', 'wb').write(myfile.content);"
+    "import shutil\n",
+    "import xlwings as xw\n",
+    "import yaml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'macros_copy.xlsm'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('configuration.yaml', 'r') as f_conf:\n",
+    "    conf = yaml.safe_load(f_conf)\n",
+    "\n",
+    "sheet_name = 'setExcel.{}'.format(conf['sheet_type'])\n",
+    "if conf['sheet_type'] == 'xlsm':\n",
+    "    url = 'https://drive.google.com/uc?export=download&id={}'.format(conf['sheet_gdid'])\n",
+    "else:\n",
+    "    url = 'https://docs.google.com/spreadsheets/d/{}/export?format=xlsx'.format(conf['sheet_gdid'])\n",
+    "\n",
+    "myfile = requests.get(url)\n",
+    "with open(sheet_name, 'wb') as f_sheet:\n",
+    "    f_sheet.write(myfile.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Copy Excel Sheet over to sheet that contains the macros, and run the macros\n",
-    "# This will create two .xml files. One in the main directory called setEons.xml, which contains the card data needed by Strange Eons.\n",
+    "# This will create two .xml files. One in the main directory called setEons.xml, which contains the card data needed by\n",
+    "# Strange Eons.\n",
     "# The second will be placed in the setOCTGN folder, which will be copied over to your OCTGN folder later in this workbook.\n",
+    "shutil.copyfile('macros.xlsm', 'macros_copy.xlsm')\n",
     "\n",
-    "import xlwings as xw\n",
     "app = xw.App(visible=False) # IF YOU WANT EXCEL TO RUN IN BACKGROUND\n",
     "xlws = {}\n",
     "\n",
-    "xlwb1 = xw.Book('setExcel.xlsm')\n",
+    "xlwb1 = xw.Book(sheet_name)\n",
     "xlws['ws1a'] = xlwb1.sheets['Sets']\n",
     "xlws['ws1b'] = xlwb1.sheets['Card Data']\n",
     "\n",
-    "xlwb2 = xw.Book('macros.xlsm')\n",
+    "xlwb2 = xw.Book('macros_copy.xlsm')\n",
     "xlws['ws2a'] = xlwb2.sheets['Sets']\n",
     "xlws['ws2b'] = xlwb2.sheets['Card Data']\n",
     "\n",
     "newVal = xlws['ws1a'].range('A3:B3').value   # get set id/name\n",
     "xlws['ws2a'].range('A3:B3').value = newVal   # update set id/name\n",
     "\n",
-    "newVal = xlws['ws1b'].range('A2:AT1000').value   # get card data\n",
-    "xlws['ws2b'].range('A2:AT1000').value = newVal   # update card data\n",
+    "newVal = xlws['ws1b'].range('A2:AV1000').value   # get card data\n",
+    "xlws['ws2b'].range('A2:AV1000').value = newVal   # update card data\n",
     "\n",
     "# This macro will generate a folder under setOCTGN, which which will be copied over to OCTGN\\GameDatabase\\a21af4e8-be4b-4cda-a6b6-534f9717391f\\Sets \n",
     "macro1 = xlwb2.macro('SaveOCTGN')\n",
@@ -61,6 +83,26 @@
     "xlwb2.save()\n",
     "xlwb1.close()\n",
     "xlwb2.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create SetGenerator.seproject\n",
+    "\n",
+    "import os\n",
+    "from os.path import basename\n",
+    "from zipfile import ZipFile\n",
+    "\n",
+    "with ZipFile('SetGenerator.zip', 'w') as zip_obj:\n",
+    "   for foldername, _, filenames in os.walk('Gilman Memorial Exhibit'):\n",
+    "       for filename in filenames:\n",
+    "           zip_obj.write(os.path.join(foldername, filename))\n",
+    "\n",
+    "os.replace('SetGenerator.zip', 'SetGenerator.seproject')"
    ]
   },
   {
@@ -89,7 +131,7 @@
     "### To update text without messing up the images:\n",
     "1. Modify the Google sheet text.\n",
     "2. Run the above python cells to update the setEons.xml file. \n",
-    "3. Run the updateCards script in Stange Eons by double clicking it. This will take the cards in \"current\", which should have images now, put in the updated text from the setEons.xml generated above, and save them under the \"updated\" folder in Strange Eons.\n",
+    "3. Run the updateCards script in Strange Eons by double clicking it. This will take the cards in \"current\", which should have images now, put in the updated text from the setEons.xml generated above, and save them under the \"updated\" folder in Strange Eons.\n",
     "\n",
     "### To export the cards\n",
     "1. Make sure the \"Bulk Export\" Plug-in is installed.\n",
@@ -253,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
