next portion of changes

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -2,39 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import requests\n",
     "import shutil\n",
     "import xlwings as xw\n",
-    "import yaml"
+    "import xml.etree.ElementTree as ET\n",
+    "import yaml\n",
+    "from zipfile import ZipFile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 89,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "PROJECT_FOLDER = 'Frogmorton'\n",
+    "SHEET_NAME = 'setExcel'\n",
+    "\n",
+    "CONFIGURATION_PATH = 'configuration.yaml'\n",
+    "IMAGES_PATH = os.path.join(PROJECT_FOLDER, 'imagesRaw')\n",
+    "MACROS_PATH = 'macros.xlsm'\n",
+    "MACROS_COPY_PATH = 'macros_copy.xlsm'\n",
+    "PROJECT_PATH = 'setGenerator.seproject'\n",
+    "XML_PATH = 'setEons.xml'\n",
+    "ZIP_PATH = 'setGenerator.zip'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('configuration.yaml', 'r') as f_conf:\n",
+    "# Download the cards spreadsheet from Google Drive\n",
+    "with open(CONFIGURATION_PATH, 'r') as f_conf:\n",
     "    conf = yaml.safe_load(f_conf)\n",
     "\n",
-    "sheet_name = 'setExcel.{}'.format(conf['sheet_type'])\n",
+    "sheet_path = '{}.{}'.format(SHEET_NAME, conf['sheet_type'])\n",
     "if conf['sheet_type'] == 'xlsm':\n",
     "    url = 'https://drive.google.com/uc?export=download&id={}'.format(conf['sheet_gdid'])\n",
     "else:\n",
     "    url = 'https://docs.google.com/spreadsheets/d/{}/export?format=xlsx'.format(conf['sheet_gdid'])\n",
     "\n",
     "myfile = requests.get(url)\n",
-    "with open(sheet_name, 'wb') as f_sheet:\n",
+    "with open(sheet_path, 'wb') as f_sheet:\n",
     "    f_sheet.write(myfile.content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,16 +66,16 @@
     "# This will create two .xml files. One in the main directory called setEons.xml, which contains the card data needed by\n",
     "# Strange Eons.\n",
     "# The second will be placed in the setOCTGN folder, which will be copied over to your OCTGN folder later in this workbook.\n",
-    "shutil.copyfile('macros.xlsm', 'macros_copy.xlsm')\n",
+    "shutil.copyfile(MACROS_PATH, MACROS_COPY_PATH)\n",
     "\n",
     "app = xw.App(visible=False) # IF YOU WANT EXCEL TO RUN IN BACKGROUND\n",
     "xlws = {}\n",
     "\n",
-    "xlwb1 = xw.Book(sheet_name)\n",
+    "xlwb1 = xw.Book(sheet_path)\n",
     "xlws['ws1a'] = xlwb1.sheets['Sets']\n",
     "xlws['ws1b'] = xlwb1.sheets['Card Data']\n",
     "\n",
-    "xlwb2 = xw.Book('macros_copy.xlsm')\n",
+    "xlwb2 = xw.Book(MACROS_COPY_PATH)\n",
     "xlws['ws2a'] = xlwb2.sheets['Sets']\n",
     "xlws['ws2b'] = xlwb2.sheets['Card Data']\n",
     "\n",
@@ -76,22 +100,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create SetGenerator.seproject\n",
+    "# Delete old image files\n",
+    "for foldername, _, filenames in os.walk(IMAGES_PATH):\n",
+    "    for filename in filenames:\n",
+    "        if filename.split('.')[-1] in ('jpg', 'png'):\n",
+    "            os.remove(os.path.join(IMAGES_PATH, filename))\n",
     "\n",
-    "import os\n",
-    "from os.path import basename\n",
-    "from zipfile import ZipFile\n",
+    "    break\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parse artwork images\n",
+    "images = {}\n",
+    "for foldername, _, filenames in os.walk(conf['artwork_path']):\n",
+    "    for filename in filenames:\n",
+    "        if filename.split('.')[-1] in ('jpg', 'png'):\n",
+    "            card_number = int(filename.split('_')[0])\n",
+    "            images[card_number] = filename\n",
     "\n",
-    "with ZipFile('SetGenerator.zip', 'w') as zip_obj:\n",
-    "   for foldername, _, filenames in os.walk('Gilman Memorial Exhibit'):\n",
-    "       for filename in filenames:\n",
-    "           zip_obj.write(os.path.join(foldername, filename))\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Copy artwork images and update generated XML with filenames\n",
+    "tree = ET.parse(XML_PATH)\n",
+    "root = tree.getroot()\n",
     "\n",
-    "os.replace('SetGenerator.zip', 'SetGenerator.seproject')"
+    "for card in root[0]:\n",
+    "    card_number = int([p for p in card\n",
+    "                       if p.attrib['name'] == 'Card Number'\n",
+    "                      ][0].attrib['value'])\n",
+    "    filename = images.get(card_number)\n",
+    "    if not filename:\n",
+    "        continue\n",
+    "\n",
+    "    shutil.copyfile(os.path.join(conf['artwork_path'], filename),\n",
+    "                    os.path.join(IMAGES_PATH, filename))\n",
+    "    prop = ET.SubElement(card, 'property')\n",
+    "    prop.set('name', 'Artwork')\n",
+    "    prop.set('value', filename)\n",
+    "\n",
+    "    is_artist = [p for p in card\n",
+    "                 if p.attrib['name'] == 'Artist']\n",
+    "    if not is_artist and '_Artist_' in filename:\n",
+    "        artist = '.'.join('_Artist_'.join(\n",
+    "            filename.split('_Artist_')[1:]).split('.')[:-1])\n",
+    "        artist = artist.replace('_', ' ')\n",
+    "        prop = ET.SubElement(card, 'property')\n",
+    "        prop.set('name', 'Artist')\n",
+    "        prop.set('value', artist)\n",
+    "        \n",
+    "tree.write(XML_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create Strange Eons project\n",
+    "with ZipFile(ZIP_PATH, 'w') as zip_obj:\n",
+    "    for foldername, _, filenames in os.walk(PROJECT_FOLDER):\n",
+    "        for filename in filenames:\n",
+    "            if filename != '.gitignore':\n",
+    "                zip_obj.write(os.path.join(foldername, filename))\n",
+    "\n",
+    "os.replace(ZIP_PATH, PROJECT_PATH)"
    ]
   },
   {
