--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,12 @@
     "import xlwings as xw\n",
     "import xml.etree.ElementTree as ET\n",
     "import yaml\n",
-    "from zipfile import ZipFile"
+    "import zipfile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 151,
    "metadata": {
     "scrolled": true
    },
@@ -30,14 +30,15 @@
     "IMAGES_PATH = os.path.join(PROJECT_FOLDER, 'imagesRaw')\n",
     "MACROS_PATH = 'macros.xlsm'\n",
     "MACROS_COPY_PATH = 'macros_copy.xlsm'\n",
+    "OUTPUT_PATH = 'imagesEons'\n",
+    "OUTPUT_PATH_ZIP = '{}/Decks/new/'.format(os.path.split(PROJECT_FOLDER)[-1])\n",
     "PROJECT_PATH = 'setGenerator.seproject'\n",
-    "XML_PATH = 'setEons.xml'\n",
-    "ZIP_PATH = 'setGenerator.zip'"
+    "XML_PATH = 'setEons.xml'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,13 +111,12 @@
     "        if filename.split('.')[-1] in ('jpg', 'png'):\n",
     "            os.remove(os.path.join(IMAGES_PATH, filename))\n",
     "\n",
-    "    break\n",
-    "\n"
+    "    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,83 +170,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create Strange Eons project\n",
-    "with ZipFile(ZIP_PATH, 'w') as zip_obj:\n",
+    "with zipfile.ZipFile(PROJECT_PATH, 'w') as zip_obj:\n",
     "    for foldername, _, filenames in os.walk(PROJECT_FOLDER):\n",
     "        for filename in filenames:\n",
     "            if filename != '.gitignore':\n",
     "                zip_obj.write(os.path.join(foldername, filename))\n",
     "\n",
-    "os.replace(ZIP_PATH, PROJECT_PATH)"
+    "#os.replace(ZIP_PATH, PROJECT_PATH)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Strange Eons instructions:\n",
+    "### Strange Eons part:\n",
     "\n",
-    "Start by opening up the `setGenerator.seproject` file in the main directory.\n",
-    "\n",
-    "### Now, if it's your first time opening Strange Eons for this project:\n",
-    "\n",
-    "1. Open each of the files in \"template\" and edit the \"Collection\" tab for each one as needed for the project.\n",
-    "2. Run the makeCards script by double clicking it. This will take the templates, fill them with the text from the setEons.xml generated above, and save them under the \"new\" folder in Strange Eons.\n",
-    "3. Move all the files in \"new\" to \"current\".\n",
-    "\n",
-    "### To add images:\n",
-    "1. Open up a file in \"current\"\n",
-    "2. Click on the Portrait tab\n",
-    "3. From your computer, navigate to the imagesRaw folder and drag an image from there into Strange Eons to add it to the card.\n",
-    "4. Within Strange Eons, move and scale the image as necessary.\n",
-    "5. If it's an encounter card, do the same thing with the encounter set icon with the Encounter Set tab and the imagesIcons folder.\n",
-    "6. Save the file, close it, and move on to the next.\n",
-    "7. Note: If you do any modifications to the text, they will not be preserved by the next macro. Modifications to the text should be done only in the original Google sheet.\n",
-    "\n",
-    "### To update text without messing up the images:\n",
-    "1. Modify the Google sheet text.\n",
-    "2. Run the above python cells to update the setEons.xml file. \n",
-    "3. Run the updateCards script in Strange Eons by double clicking it. This will take the cards in \"current\", which should have images now, put in the updated text from the setEons.xml generated above, and save them under the \"updated\" folder in Strange Eons.\n",
-    "\n",
-    "### To export the cards\n",
-    "1. Make sure the \"Bulk Export\" Plug-in is installed.\n",
-    "2. Right-click the \"updated\" folder, click on \"Bulk Export, choose the settings you want, and hit \"Export\"\n",
-    "3. Once complete, copy all the files in \"updated\" to your imagesEons folder (the .eon file too if you want).\n",
-    "\n",
-    "### Important: Dealing with name, id, etc. changes\n",
-    "Since the Card Number, Quantity, Name, and OCTGN ID all appear in the file name, any changes to these values will result in a desyncronization when trying to run updateCards. Here are the steps to follow in this case:\n",
-    "1. In the \"current\" Strange Eons folder, manually fix the relevant file name.\n",
-    "2. If your modification resulted in a longer filename, remove some \"-\" characters so that the total number of characters in the file name stays constant.\n",
-    "3. Alternatively, if your modification resulted in a shorter filename, add extra \"-\" characters so that the total number of characters in the file name stays constant.\n",
-    "4. Then, run the updateCards script."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Update OCTGN"
+    "1. Open the`setGenerator.seproject` generated above.\n",
+    "2. Run the `makeCards` script by double clicking it (see `Script` folder).  This will take the templates, fill them with the values from the `setEons.xml` generated above, and save them under the `Decks/new` folder in Strange Eons.\n",
+    "3. Right-click the `Decks/new` folder, click on \"Bulk Export\", choose the settings you want, and hit \"Export\".\n",
+    "4. Once complete, close Strange Eons."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "# Directory of OCTGN installation\n",
-    "dirOCTGN = os.path.expanduser('~')+'\\\\Documents\\\\OCTGN\\\\'\n",
-    "if not os.path.isdir(dirOCTGN): print('Invalid path!')"
+    "# Delete old image files\n",
+    "for foldername, _, filenames in os.walk(OUTPUT_PATH):\n",
+    "    for filename in filenames:\n",
+    "        if filename.split('.')[-1] in ('jpg', 'png'):\n",
+    "            os.remove(os.path.join(OUTPUT_PATH, filename))\n",
+    "\n",
+    "    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Copy generated images from the project zip\n",
+    "with zipfile.ZipFile(PROJECT_PATH) as zip_obj:\n",
+    "    filelist = [f for f in zip_obj.namelist()\n",
+    "                if f.startswith(OUTPUT_PATH_ZIP)\n",
+    "                and f.split('.')[-1] in ('jpg', 'png')]\n",
+    "    for filename in filelist:\n",
+    "        with zip_obj.open(filename) as zip_file:\n",
+    "            with open(os.path.join(OUTPUT_PATH,\n",
+    "                      os.path.split(filename)[-1]), 'wb') as output_file:\n",
+    "                shutil.copyfileobj(zip_file, output_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -254,16 +239,14 @@
      "output_type": "stream",
      "text": [
       "Working...\n",
+      "Finished.\n",
+      "Working...\n",
       "Finished.\n"
      ]
     }
    ],
    "source": [
-    "#Make Image Pack\n",
-    "import os.path\n",
-    "import zipfile\n",
-    "import shutil\n",
-    "\n",
+    "# Make Image Pack\n",
     "# Move files from startpath to newpath, then scan through files, processes them, and add them to a zip file to create an image pack\n",
     "def zipdir(startpath, newpath, ziph):\n",
     "    # Move files in current directory to new directory\n",
@@ -288,7 +271,6 @@
     "                        shutil.move(newpath+file, newpath+file[50:])\n",
     "                        file = file[50:]\n",
     "                ziph.write(os.path.join(root, file))\n",
-    "\n",
     "\n",
     "# Current directory\n",
     "cwd = os.getcwd()\n",
@@ -339,7 +321,10 @@
    "source": [
     "# Copy set folder to OCTGN directory\n",
     "from distutils.dir_util import copy_tree\n",
-    "setspath = dirOCTGN+'\\\\GameDatabase\\\\a21af4e8-be4b-4cda-a6b6-534f9717391f\\\\Sets\\\\'\n",
+    "\n",
+    "dirOCTGN = os.path.expanduser('~')+'\\\\Documents\\\\OCTGN\\\\'\n",
+    "if not os.path.isdir(dirOCTGN): print('Invalid path!')setspath = dirOCTGN+'\\\\GameDatabase\\\\a21af4e8-be4b-4cda-a6b6-534f9717391f\\\\Sets\\\\'\n",
+    "\n",
     "if os.path.isdir(dirOCTGN):\n",
     "    if os.path.isdir('.\\\\setOCTGN\\\\'+octgnid):\n",
     "        copy_tree('.\\\\setOCTGN\\\\'+octgnid, setspath+octgnid)\n",
