Refactor generating OCTGN outputs

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import re\n",
     "import requests\n",
     "import shutil\n",
     "import xlwings as xw\n",
@@ -17,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -28,17 +29,20 @@
     "\n",
     "CONFIGURATION_PATH = 'configuration.yaml'\n",
     "IMAGES_PATH = os.path.join(PROJECT_FOLDER, 'imagesRaw')\n",
+    "IMAGES_ZIP_PATH = '{}/Decks/new/'.format(os.path.split(PROJECT_FOLDER)[-1])\n",
     "MACROS_PATH = 'macros.xlsm'\n",
     "MACROS_COPY_PATH = 'macros_copy.xlsm'\n",
-    "OUTPUT_PATH = 'imagesEons'\n",
-    "OUTPUT_PATH_ZIP = '{}/Decks/new/'.format(os.path.split(PROJECT_FOLDER)[-1])\n",
+    "OCTGN_ZIP_PATH = 'imagesOCTGN/a21af4e8-be4b-4cda-a6b6-534f9717391f/Sets'\n",
+    "OUTPUT_EONS_PATH = 'imagesEons'\n",
+    "OUTPUT_OCTGN_PATH = ''\n",
     "PROJECT_PATH = 'setGenerator.seproject'\n",
-    "XML_PATH = 'setEons.xml'"
+    "SET_EONS_PATH = 'setEons.xml'\n",
+    "SET_OCTGN_PATH = 'setOCTGN'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,86 +63,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Copy Excel Sheet over to sheet that contains the macros, and run the macros\n",
-    "# This will create two .xml files. One in the main directory called setEons.xml, which contains the card data needed by\n",
-    "# Strange Eons.\n",
-    "# The second will be placed in the setOCTGN folder, which will be copied over to your OCTGN folder later in this workbook.\n",
-    "shutil.copyfile(MACROS_PATH, MACROS_COPY_PATH)\n",
+    "# This will create two .xml files. One in the main directory called setEons.xml, which contains the card data\n",
+    "# needed by Strange Eons.\n",
+    "# The second will be placed in the setOCTGN folder, which will be copied over to your OCTGN folder later\n",
+    "# in this workbook.\n",
     "\n",
-    "app = xw.App(visible=False) # IF YOU WANT EXCEL TO RUN IN BACKGROUND\n",
+    "shutil.copyfile(MACROS_PATH, MACROS_COPY_PATH)\n",
+    "for folder in next(os.walk(SET_OCTGN_PATH))[1]:\n",
+    "    shutil.rmtree(os.path.join(SET_OCTGN_PATH, folder))\n",
+    "\n",
+    "app = xw.App(visible=False)  # IF YOU WANT EXCEL TO RUN IN BACKGROUND\n",
     "xlws = {}\n",
     "\n",
     "xlwb1 = xw.Book(sheet_path)\n",
-    "xlws['ws1a'] = xlwb1.sheets['Sets']\n",
-    "xlws['ws1b'] = xlwb1.sheets['Card Data']\n",
+    "try:\n",
+    "    xlws['ws1a'] = xlwb1.sheets['Sets']\n",
+    "    xlws['ws1b'] = xlwb1.sheets['Card Data']\n",
     "\n",
-    "xlwb2 = xw.Book(MACROS_COPY_PATH)\n",
-    "xlws['ws2a'] = xlwb2.sheets['Sets']\n",
-    "xlws['ws2b'] = xlwb2.sheets['Card Data']\n",
+    "    xlwb2 = xw.Book(MACROS_COPY_PATH)\n",
+    "    try:\n",
+    "        xlws['ws2a'] = xlwb2.sheets['Sets']\n",
+    "        xlws['ws2b'] = xlwb2.sheets['Card Data']\n",
     "\n",
-    "newVal = xlws['ws1a'].range('A3:B3').value   # get set id/name\n",
-    "xlws['ws2a'].range('A3:B3').value = newVal   # update set id/name\n",
+    "        newVal = xlws['ws1a'].range('A3:B3').value  # get set id/name\n",
+    "        xlws['ws2a'].range('A3:B3').value = newVal  # update set id/name\n",
     "\n",
-    "newVal = xlws['ws1b'].range('A2:AV1000').value   # get card data\n",
-    "xlws['ws2b'].range('A2:AV1000').value = newVal   # update card data\n",
+    "        newVal = xlws['ws1b'].range('A2:AV1000').value  # get card data\n",
+    "        xlws['ws2b'].range('A2:AV1000').value = newVal  # update card data\n",
     "\n",
-    "# This macro will generate a folder under setOCTGN, which which will be copied over to OCTGN\\GameDatabase\\a21af4e8-be4b-4cda-a6b6-534f9717391f\\Sets \n",
-    "macro1 = xlwb2.macro('SaveOCTGN')\n",
-    "macro1()\n",
+    "        # This macro will generate a folder under setOCTGN, which which will be copied over\n",
+    "        # to OCTGN\\GameDatabase\\a21af4e8-be4b-4cda-a6b6-534f9717391f\\Sets \n",
+    "        macro1 = xlwb2.macro('SaveOCTGN')\n",
+    "        macro1()\n",
     "\n",
-    "# This macro generates a file called setEons.xml, which is used by the Strange Eons macros.\n",
-    "macro2 = xlwb2.macro('SaveXML')\n",
-    "macro2()\n",
+    "        # This macro will generate a file called setEons.xml, which is used by the Strange Eons scripts.\n",
+    "        macro2 = xlwb2.macro('SaveXML')\n",
+    "        macro2()\n",
     "\n",
-    "xlwb2.save()\n",
-    "xlwb1.close()\n",
-    "xlwb2.close()"
+    "        xlwb2.save()\n",
+    "    finally:\n",
+    "        xlwb2.close()\n",
+    "finally:\n",
+    "    xlwb1.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Delete old image files\n",
-    "for foldername, _, filenames in os.walk(IMAGES_PATH):\n",
+    "for _, _, filenames in os.walk(IMAGES_PATH):\n",
     "    for filename in filenames:\n",
     "        if filename.split('.')[-1] in ('jpg', 'png'):\n",
     "            os.remove(os.path.join(IMAGES_PATH, filename))\n",
     "\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 155,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    break\n",
+    "\n",
     "# Parse artwork images\n",
     "images = {}\n",
-    "for foldername, _, filenames in os.walk(conf['artwork_path']):\n",
+    "for _, _, filenames in os.walk(conf['artwork_path']):\n",
     "    for filename in filenames:\n",
     "        if filename.split('.')[-1] in ('jpg', 'png'):\n",
     "            card_number = int(filename.split('_')[0])\n",
     "            images[card_number] = filename\n",
     "\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    break\n",
+    "\n",
     "# Copy artwork images and update generated XML with filenames\n",
-    "tree = ET.parse(XML_PATH)\n",
+    "tree = ET.parse(SET_EONS_PATH)\n",
     "root = tree.getroot()\n",
     "\n",
     "for card in root[0]:\n",
@@ -155,8 +154,7 @@
     "    prop.set('name', 'Artwork')\n",
     "    prop.set('value', filename)\n",
     "\n",
-    "    is_artist = [p for p in card\n",
-    "                 if p.attrib['name'] == 'Artist']\n",
+    "    is_artist = [p for p in card if p.attrib['name'] == 'Artist']\n",
     "    if not is_artist and '_Artist_' in filename:\n",
     "        artist = '.'.join('_Artist_'.join(\n",
     "            filename.split('_Artist_')[1:]).split('.')[:-1])\n",
@@ -164,24 +162,22 @@
     "        prop = ET.SubElement(card, 'property')\n",
     "        prop.set('name', 'Artist')\n",
     "        prop.set('value', artist)\n",
-    "        \n",
-    "tree.write(XML_PATH)"
+    "\n",
+    "tree.write(SET_EONS_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create Strange Eons project\n",
     "with zipfile.ZipFile(PROJECT_PATH, 'w') as zip_obj:\n",
-    "    for foldername, _, filenames in os.walk(PROJECT_FOLDER):\n",
+    "    for root, _, filenames in os.walk(PROJECT_FOLDER):\n",
     "        for filename in filenames:\n",
     "            if filename != '.gitignore':\n",
-    "                zip_obj.write(os.path.join(foldername, filename))\n",
-    "\n",
-    "#os.replace(ZIP_PATH, PROJECT_PATH)"
+    "                zip_obj.write(os.path.join(root, filename))"
    ]
   },
   {
@@ -190,7 +186,7 @@
    "source": [
     "### Strange Eons part:\n",
     "\n",
-    "1. Open the`setGenerator.seproject` generated above.\n",
+    "1. Open the `setGenerator.seproject` generated above.\n",
     "2. Run the `makeCards` script by double clicking it (see `Script` folder).  This will take the templates, fill them with the values from the `setEons.xml` generated above, and save them under the `Decks/new` folder in Strange Eons.\n",
     "3. Right-click the `Decks/new` folder, click on \"Bulk Export\", choose the settings you want, and hit \"Export\".\n",
     "4. Once complete, close Strange Eons."
@@ -198,132 +194,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Delete old image files\n",
-    "for foldername, _, filenames in os.walk(OUTPUT_PATH):\n",
+    "for _, _, filenames in os.walk(OUTPUT_EONS_PATH):\n",
     "    for filename in filenames:\n",
     "        if filename.split('.')[-1] in ('jpg', 'png'):\n",
-    "            os.remove(os.path.join(OUTPUT_PATH, filename))\n",
+    "            os.remove(os.path.join(OUTPUT_EONS_PATH, filename))\n",
     "\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    break\n",
+    "\n",
     "# Copy generated images from the project zip\n",
     "with zipfile.ZipFile(PROJECT_PATH) as zip_obj:\n",
-    "    filelist = [f for f in zip_obj.namelist()\n",
-    "                if f.startswith(OUTPUT_PATH_ZIP)\n",
+    "    filelist = [f for f in zip_obj.namelist() if f.startswith(IMAGES_ZIP_PATH)\n",
     "                and f.split('.')[-1] in ('jpg', 'png')]\n",
     "    for filename in filelist:\n",
     "        with zip_obj.open(filename) as zip_file:\n",
-    "            with open(os.path.join(OUTPUT_PATH,\n",
+    "            with open(os.path.join(OUTPUT_EONS_PATH,\n",
     "                      os.path.split(filename)[-1]), 'wb') as output_file:\n",
     "                shutil.copyfileobj(zip_file, output_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working...\n",
-      "Finished.\n",
-      "Working...\n",
-      "Finished.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Make Image Pack\n",
-    "# Move files from startpath to newpath, then scan through files, processes them, and add them to a zip file to create an image pack\n",
-    "def zipdir(startpath, newpath, ziph):\n",
-    "    # Move files in current directory to new directory\n",
-    "    for root, dirs, files in os.walk(startpath):\n",
-    "        for file in files:\n",
-    "            oldfile = startpath+'/'+file\n",
-    "            if (file.endswith('.png') and os.path.isfile(oldfile)):\n",
-    "                newfile=newpath+file\n",
-    "                shutil.copyfile(oldfile, newfile)\n",
-    "                \n",
-    "    # Zip files in new directory\n",
-    "    for root, dirs, files in os.walk(newpath):\n",
-    "        for file in files:\n",
-    "            if file.endswith('-1.png'):\n",
-    "                shutil.move(newpath+file, newpath+file.replace('-1.png', '.png'))\n",
-    "                file = file.replace('-1.png', '.png')\n",
-    "            if file.endswith('-2.png'):\n",
-    "                shutil.move(newpath+file, newpath+file.replace('-2.png', '.B.png'))\n",
-    "                file = file.replace('-2.png', '.B.png')\n",
-    "            if (file.endswith('.png')):\n",
-    "                if len(file)>50: \n",
-    "                        shutil.move(newpath+file, newpath+file[50:])\n",
-    "                        file = file[50:]\n",
-    "                ziph.write(os.path.join(root, file))\n",
-    "\n",
-    "# Current directory\n",
-    "cwd = os.getcwd()\n",
+    "# Make an image pack\n",
     "\n",
     "# OCTGN Set ID obtained by looking at the folders generated by the excel SaveOCTGN script\n",
-    "octgnids = os.listdir(cwd+'/setOCTGN')\n",
-    "if len(octgnids) == 0:\n",
-    "    print(\"No set folder found in ./setOCTGN. Did you run the excel script?\")\n",
-    "else:\n",
-    "    for octgnid in octgnids:\n",
-    "        # Make directory tree to store images that will be converted to an image pack\n",
-    "        newpath = \".\\\\imagesOCTGN\\\\a21af4e8-be4b-4cda-a6b6-534f9717391f\\\\Sets\\\\\"+octgnid+\"\\\\Cards\\\\\"\n",
-    "        if not os.path.exists(newpath):\n",
-    "            os.makedirs(newpath)\n",
+    "octgnid = next(os.walk(SET_OCTGN_PATH))[1][0]\n",
     "\n",
-    "        # Remove any existing image pack\n",
-    "        fname = 'imagePack_'+octgnid+'.o8c'\n",
-    "        if os.path.isfile(fname): os.remove(fname)\n",
+    "pack_path = os.path.join(OUTPUT_OCTGN_PATH, 'imagePack_{}.o8c'.format(octgnid))\n",
+    "with zipfile.ZipFile(pack_path, 'w', zipfile.ZIP_DEFLATED) as zip_obj:\n",
+    "    for _, _, filenames in os.walk(OUTPUT_EONS_PATH):\n",
+    "        for filename in filenames:\n",
+    "            if filename.split('.')[-1] not in ('jpg', 'png'):\n",
+    "                continue\n",
     "\n",
-    "        # Make a zip file\n",
-    "        zipf = zipfile.ZipFile(fname, 'w', zipfile.ZIP_DEFLATED)\n",
+    "            oldfile = os.path.join(OUTPUT_EONS_PATH, filename)\n",
+    "            parts = filename.split('.')\n",
+    "            parts[0] = re.sub('-1$', '', re.sub('-2$', '.B', parts[0]))\n",
+    "            filename = '.'.join(parts)\n",
+    "            if len(filename) > 50: \n",
+    "                filename = filename[50:]\n",
     "\n",
-    "        # Add images to the zip file\n",
-    "        print('Working...')\n",
-    "        zipdir('./imagesEons',newpath, zipf)\n",
-    "        print('Finished.')\n",
+    "            newfile = '{}/{}/Cards/{}'.format(OCTGN_ZIP_PATH, octgnid, filename)\n",
+    "            zip_obj.write(oldfile, newfile)\n",
     "\n",
-    "        # Close the zip file\n",
-    "        zipf.close()\n",
-    "        \n",
-    "        # Now there should be an imagePack_<octgnid>.o8c file in the main directory. \n",
-    "        # Open that using the \"Add Image Packs\" button from within OCTGN to add it.\n"
+    "        break\n",
+    "\n",
+    "# Now there should be an imagePack_<octgnid>.o8c file.\n",
+    "# Open that using the \"Add Image Packs\" button from within OCTGN to add it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Copied successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Copy set folder to OCTGN directory\n",
     "from distutils.dir_util import copy_tree\n",
     "\n",
     "dirOCTGN = os.path.expanduser('~')+'\\\\Documents\\\\OCTGN\\\\'\n",
-    "if not os.path.isdir(dirOCTGN): print('Invalid path!')setspath = dirOCTGN+'\\\\GameDatabase\\\\a21af4e8-be4b-4cda-a6b6-534f9717391f\\\\Sets\\\\'\n",
+    "if not os.path.isdir(dirOCTGN): print('Invalid path!')\n",
+    "\n",
+    "setspath = dirOCTGN+'\\\\GameDatabase\\\\a21af4e8-be4b-4cda-a6b6-534f9717391f\\\\Sets\\\\'\n",
     "\n",
     "if os.path.isdir(dirOCTGN):\n",
     "    if os.path.isdir('.\\\\setOCTGN\\\\'+octgnid):\n",
