Set encounter set numbers

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,11 +136,24 @@
     "\n",
     "    break\n",
     "\n",
-    "# Copy artwork images and update generated XML with filenames\n",
+    "# Copy artwork images and update generated XML with filenames and encounter set numbers\n",
     "tree = ET.parse(SET_EONS_PATH)\n",
     "root = tree.getroot()\n",
+    "encounter_sets = {}\n",
     "\n",
     "for card in root[0]:\n",
+    "    encounter_set = [p for p in card\n",
+    "                     if p.attrib['name'] == 'Encounter Set']\n",
+    "    if encounter_set:\n",
+    "        encounter_set = encounter_set[0].attrib['value']\n",
+    "        prop = ET.SubElement(card, 'property')\n",
+    "        prop.set('name', 'Encounter Set Number')\n",
+    "        prop.set('value', str(encounter_sets.get(encounter_set, 0) + 1))\n",
+    "        quantity = int([p for p in card\n",
+    "                        if p.attrib['name'] == 'Quantity'\n",
+    "                       ][0].attrib['value'])\n",
+    "        encounter_sets[encounter_set] = encounter_sets.get(encounter_set, 0) + quantity\n",
+    "\n",
     "    card_number = int([p for p in card\n",
     "                       if p.attrib['name'] == 'Card Number'\n",
     "                      ][0].attrib['value'])\n",
@@ -163,12 +176,21 @@
     "        prop.set('name', 'Artist')\n",
     "        prop.set('value', artist)\n",
     "\n",
+    "for card in root[0]:\n",
+    "    encounter_set = [p for p in card\n",
+    "                     if p.attrib['name'] == 'Encounter Set']\n",
+    "    if encounter_set:\n",
+    "        encounter_set = encounter_set[0].attrib['value']\n",
+    "        prop = ET.SubElement(card, 'property')\n",
+    "        prop.set('name', 'Encounter Set Total')\n",
+    "        prop.set('value', str(encounter_sets[encounter_set]))\n",
+    "\n",
     "tree.write(SET_EONS_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
