--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 86,
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,8 +93,8 @@
     "        newVal = xlws['ws1a'].range('A3:B3').value  # get set id/name\n",
     "        xlws['ws2a'].range('A3:B3').value = newVal  # update set id/name\n",
     "\n",
-    "        newVal = xlws['ws1b'].range('A2:AV1000').value  # get card data\n",
-    "        xlws['ws2b'].range('A2:AV1000').value = newVal  # update card data\n",
+    "        newVal = xlws['ws1b'].range('A2:AW1000').value  # get card data\n",
+    "        xlws['ws2b'].range('A2:AW1000').value = newVal  # update card data\n",
     "\n",
     "        # This macro will generate a folder under setOCTGN, which which will be copied over\n",
     "        # to OCTGN\\GameDatabase\\a21af4e8-be4b-4cda-a6b6-534f9717391f\\Sets \n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,12 +140,17 @@
     "tree = ET.parse(SET_EONS_PATH)\n",
     "root = tree.getroot()\n",
     "encounter_sets = {}\n",
+    "encounter_cards = {}\n",
     "\n",
     "for card in root[0]:\n",
+    "    card_type = [p for p in card\n",
+    "                 if p.attrib['name'] == 'Type'\n",
+    "                ][0].attrib['value']\n",
     "    encounter_set = [p for p in card\n",
     "                     if p.attrib['name'] == 'Encounter Set']\n",
-    "    if encounter_set:\n",
+    "    if card_type != 'Quest' and encounter_set:\n",
     "        encounter_set = encounter_set[0].attrib['value']\n",
+    "        encounter_cards[card.attrib['id']] = encounter_set\n",
     "        prop = ET.SubElement(card, 'property')\n",
     "        prop.set('name', 'Encounter Set Number')\n",
     "        prop.set('value', str(encounter_sets.get(encounter_set, 0) + 1))\n",
@@ -170,27 +175,23 @@
     "    is_artist = [p for p in card if p.attrib['name'] == 'Artist']\n",
     "    if not is_artist and '_Artist_' in filename:\n",
     "        artist = '.'.join('_Artist_'.join(\n",
-    "            filename.split('_Artist_')[1:]).split('.')[:-1])\n",
-    "        artist = artist.replace('_', ' ')\n",
+    "            filename.split('_Artist_')[1:]).split('.')[:-1]).replace('_', ' ')\n",
     "        prop = ET.SubElement(card, 'property')\n",
     "        prop.set('name', 'Artist')\n",
     "        prop.set('value', artist)\n",
     "\n",
     "for card in root[0]:\n",
-    "    encounter_set = [p for p in card\n",
-    "                     if p.attrib['name'] == 'Encounter Set']\n",
-    "    if encounter_set:\n",
-    "        encounter_set = encounter_set[0].attrib['value']\n",
+    "    if card.attrib['id'] in encounter_cards:\n",
     "        prop = ET.SubElement(card, 'property')\n",
     "        prop.set('name', 'Encounter Set Total')\n",
-    "        prop.set('value', str(encounter_sets[encounter_set]))\n",
+    "        prop.set('value', str(encounter_sets[encounter_cards[card.attrib['id']]]))\n",
     "\n",
     "tree.write(SET_EONS_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,13 +211,19 @@
     "\n",
     "1. Open the `setGenerator.seproject` generated above.\n",
     "2. Run the `makeCards` script by double clicking it (see `Script` folder).  This will take the templates, fill them with the values from the `setEons.xml` generated above, and save them under the `Decks/new` folder in Strange Eons.\n",
-    "3. Right-click the `Decks/new` folder, click on \"Bulk Export\", choose the settings you want, and hit \"Export\".\n",
+    "3. Right-click the `Decks/new` folder, click on \"Bulk Export\", set the following values and hit \"Export\":\n",
+    "\n",
+    "  - PNG\n",
+    "  - 300 ppi\n",
+    "  - Exclude simple back faces\n",
+    "  - leave all other checkboxes unchecked\n",
+    "\n",
     "4. Once complete, close Strange Eons."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,15 +248,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'add'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-109-631b2329bbfe>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mfilename\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfilenames\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m                 \u001b[0mfilenames\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m                 \u001b[0mnewfile\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'{}/{}/Cards/{}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mOCTGN_ZIP_PATH\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moctgnid\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m                 \u001b[0mzip_obj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moldfile\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnewfile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'add'"
+     ]
+    }
+   ],
    "source": [
     "# OCTGN Set ID obtained by looking at the folders generated by the excel SaveOCTGN script\n",
     "octgnid = next(os.walk(SET_OCTGN_PATH))[1][0]\n",
     "\n",
     "# Make an image pack\n",
     "pack_path = os.path.join(OUTPUT_OCTGN_PATH, 'imagePack_{}.o8c'.format(octgnid))\n",
+    "known_filenames = set()\n",
     "with zipfile.ZipFile(pack_path, 'w', zipfile.ZIP_DEFLATED) as zip_obj:\n",
     "    for _, _, filenames in os.walk(OUTPUT_EONS_PATH):\n",
     "        for filename in filenames:\n",
@@ -263,8 +283,10 @@
     "            if len(filename) > 50: \n",
     "                filename = filename[50:]\n",
     "\n",
-    "            newfile = '{}/{}/Cards/{}'.format(OCTGN_ZIP_PATH, octgnid, filename)\n",
-    "            zip_obj.write(oldfile, newfile)\n",
+    "            if filename not in filenames:\n",
+    "                filenames.add(filename)\n",
+    "                newfile = '{}/{}/Cards/{}'.format(OCTGN_ZIP_PATH, octgnid, filename)\n",
+    "                zip_obj.write(oldfile, newfile)\n",
     "\n",
     "        break\n",
     "\n",
