Next portion of changes

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 164,
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,8 +131,8 @@
     "for _, _, filenames in os.walk(conf['artwork_path']):\n",
     "    for filename in filenames:\n",
     "        if filename.split('.')[-1] in ('jpg', 'png'):\n",
-    "            card_number = int(filename.split('_')[0])\n",
-    "            images[card_number] = filename\n",
+    "            card_id = filename.split('_')[0]\n",
+    "            images[card_id] = filename\n",
     "\n",
     "    break\n",
     "\n",
@@ -159,10 +159,7 @@
     "                       ][0].attrib['value'])\n",
     "        encounter_sets[encounter_set] = encounter_sets.get(encounter_set, 0) + quantity\n",
     "\n",
-    "    card_number = int([p for p in card\n",
-    "                       if p.attrib['name'] == 'Card Number'\n",
-    "                      ][0].attrib['value'])\n",
-    "    filename = images.get(card_number)\n",
+    "    filename = images.get(card.attrib['id'])\n",
     "    if not filename:\n",
     "        continue\n",
     "\n",
@@ -191,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +210,8 @@
     "2. Run the `makeCards` script by double clicking it (see `Script` folder).  This will take the templates, fill them with the values from the `setEons.xml` generated above, and save them under the `Decks/new` folder in Strange Eons.\n",
     "3. Right-click the `Decks/new` folder, click on \"Bulk Export\", set the following values and hit \"Export\":\n",
     "\n",
-    "  - PNG\n",
+    "  - JPG\n",
+    "  - 90%\n",
     "  - 300 ppi\n",
     "  - Exclude simple back faces\n",
     "  - leave all other checkboxes unchecked\n",
@@ -223,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
